--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Ecumenic Creative Operations</title>
 <link rel="icon" href="img/favicon.png" sizes="16x16" type="image/png">
 <meta charset="utf-8">
-<meta property="og:image" content="./img/logo-mobile.jpg">
+<meta property="og:image" content="./img/header/logo-mobile.jpg">
 <meta name="description" content="◇ Awarded faith-based laic-compliant open-source collaborative art">
 <meta name="keywords" content="interfaith,culture,ecumenism,religiosity,sustainability, ecologic art,regenerative,reliability engineer,devops, glocal,solidarity,crosscultural,site-specific, fair trade,opera company,in-field research, data analytics,auditorship,compliance,multimedia,version controlled,git">
 <meta name="accessibility" content="Please help us making this site more accessible joining our development community.">
